# netris

assets/configuration/: settings.json
assets/shaders/: bb.vs
src/: CMakeLists.txt  netris.cpp  netris.h
src/core/: asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  display.cpp  display.h  font_writer.cpp  font_writer.h  light.cpp  light.h  mouse.cpp  mouse.h  post_processor.cpp  post_processor.h  screen.cpp  screen.h  settings.cpp  settings.h  shader.cpp  shader.h  synthesizer.cpp  synthesizer.h  visualizer.cpp  visualizer.h
src/game/: block.cpp  block.h  frame.cpp  frame.h  game.cpp  game.h  piece.cpp  piece.h
src/gfx/: sprite.cpp  sprite.h  sprite_manager.cpp  sprite_manager.h
src/util/: mathfunc.cpp  mathfunc.h  pngfuncs.cpp  pngfuncs.h
